@@ -24,6 +24,7 @@
     
     REACTIVATED: usermenu (now using the new useraction-system)
 
+    FIXED: internationalization bugs, illegal usage of QString::latin1()
     FIXED: [ 1005533 ] stepping onto a subfs device crashes krusader
     FIXED: [ 988835 ] window size of synchronize dirs is not stored
     FIXED: [ 946567 ] krusader minimizes to tray on desktop change
